--- a/index.html
+++ b/index.html
@@ -11,34 +11,105 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    
 </head>
 
 <body class="light">
     <div id="container">
-        <div class="left" id="left">
+        <div class="left flex-column" id="left">
+            <div>
             <h1 class="dark">Ruchi Verma</h1>
             <h2 class="dark">Full Stack Engineer</h2>
-            <p class="light about">I build pixel-perfect, engaging, and <br>accessible digital experiences.</p>
+            <p class="light mini_about">I build pixel-perfect, engaging, and <br>accessible digital experiences.</p>
             <nav class="flex-column ">
                 <div class="nav_pd"><a href="" class="navigator">About</a></div>
                 <div class="nav_pd"><a href="" class="navigator">Experience</a></div>
                 <div class="nav_pd"><a href="" class="navigator">Projects</a></div>
             </nav>
-            <div class="flex-row icon_container" >
-                <a href=""><i class="fa-brands fa-linkedin  icon light" ></i></a>
-                <a href=""><i class="fa-brands fa-github icon light"></i></a>
-                <a href=""><i class="fa-brands fa-instagram icon light" ></i></a>
-                <a href=""><i class="fa-brands fa-twitter icon light"></i></a>
-                <a href=""></a>
-            </div>
+        </div>
+        <div class="flex-row icon_container" >
+            <a href=""><i class="fa-brands fa-linkedin  icon light" ></i></a>
+            <a href=""><i class="fa-brands fa-github icon light"></i></a>
+            <a href=""><i class="fa-brands fa-instagram icon light" ></i></a>
+            <a href=""><i class="fa-brands fa-twitter icon light"></i></a>
+            <a href=""></a>
+        </div>
         </div>
         <div class="right flex-column" id="right">
-            <div>
+            <div class="about">
                 <p class="mb-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae voluptatem similique error? Eveniet beatae nesciunt quidem vitae? Nam aperiam quo labore, eius odio velit adipisci eaque necessitatibus minus, ratione at asperiores cumque nesciunt animi itaque corrupti doloribus recusandae illum assumenda qui praesentium. Magni nihil nulla sed quas eum. Dolor, culpa!</p>
-                <p class="mb-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit obcaecati corrupti id fuga, sequi cupiditate quasi corporis sed dolore necessitatibus, nostrum et reiciendis. Quod adipisci facilis cum officia accusamus consequatur eius aperiam deserunt earum, totam veritatis eligendi, laboriosam amet, doloribus sapiente facere assumenda repellat natus? Earum accusantium, dolor, ad veniam eos in voluptatem architecto dolore, doloremque iste doloribus asperiores debitis?</p>
-                <p class="mb-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit labore ad eum delectus nobis voluptatum magni asperiores dolorem voluptates velit, architecto, maxime minima debitis! Recusandae dolore non deserunt temporibus sed.</p>
+                <p class="mb-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit obcaecati corrupti id fuga, sequi cupiditate quasi corporis sed dolore necessitatibus, no, doloribus sapiente facere assumenda repellat natus? Earum accusantium, dolor, ad veniam eos in voluptatem architecto dolore, doloremque iste doloribus asperiores debitis?</p>
+                <p class="mb-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit labore ad eum delectus nobis voluptatum magni asperiores dolorem menda facere alias, a vel? Consequuntur id magnam assumenda rro enim incidunt non deserunt sequi dolore eveniet odio explicabo. Corporis dolorum incidunt consectetur, odio ducimus qui veniam culpa debitis aperiam sed quas ut pro</p>
+            </div>
+            <div class="experience">
+                <div class="exp"></div>
+                <div class="exp"></div>
+                <div class="exp"></div>
+                <div class="exp"></div>
+                <div class="exp"></div>
+            </div>
+            <div class="projects">
+                <div class="project flex-row">
+                    <img src="google.png" alt="">
+                    <div class="about-project flex-column">
+                        <div><a href="" class="project_heading">Build a Spotify Connected App</a></div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus neque, libero doloribus sapiente laudantium veniam asperiores enim esse! Iste quasi voluptate nobis, vitae corrupti laborum aliquid facere asperiores sint! Fugit animi eaque cum eum illum aliquid eveniet odit provident labore.
+                        </p>
+                        <div class="flex-row row-wrap">
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project flex-row">
+                    <img src="google.png" alt="">
+                    <div class="about-project flex-column">
+                        <div><a href="" class="project_heading">Build a Spotify Connected App</a></div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus neque, libero doloribus sapiente laudantium veniam asperiores enim esse! Iste quasi voluptate nobis, vitae corrupti laborum aliquid facere asperiores sint! Fugit animi eaque cum eum illum aliquid eveniet odit provident labore.
+                        </p>
+                        <div class="flex-row row-wrap">
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                        </div>
+                    </div>
+                </div> <div class="project flex-row">
+                    <img src="google.png" alt="">
+                    <div class="about-project flex-column">
+                        <div><a href="" class="project_heading">Build a Spotify Connected App</a></div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus neque, libero doloribus sapiente laudantium veniam asperiores enim esse! Iste quasi voluptate nobis, vitae corrupti laborum aliquid facere asperiores sint! Fugit animi eaque cum eum illum aliquid eveniet odit provident labore.
+                        </p>
+                        <div class="flex-row row-wrap">
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                        </div>
+                    </div>
+                </div> <div class="project flex-row">
+                    <img src="google.png" alt="">
+                    <div class="about-project flex-column">
+                        <div><a href="" class="project_heading">Build a Spotify Connected App</a></div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus neque, libero doloribus sapiente laudantium veniam asperiores enim esse! Iste quasi voluptate nobis, vitae corrupti laborum aliquid facere asperiores sint! Fugit animi eaque cum eum illum aliquid eveniet odit provident labore.
+                        </p>
+                        <div class="flex-row row-wrap">
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                            <div class="tech">abcd</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
