--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <h2 class="dark">Full Stack Engineer</h2>
             <p class="light mini_about">I build pixel-perfect, engaging, and <br>accessible digital experiences.</p>
             <nav class="flex-column ">
-                <div class="nav_pd"><a href="" class="navigator">About</a></div>
-                <div class="nav_pd"><a href="" class="navigator">Experience</a></div>
-                <div class="nav_pd"><a href="" class="navigator">Projects</a></div>
+                <div class="nav_pd focus"><a href="" class="navigator"><hr>About</a></div>
+                <div class="nav_pd focus"><a href="" class="navigator"><hr>Experience</a></div>
+                <div class="nav_pd focus"><a href="" class="navigator"><hr>Projects</a></div>
             </nav>
         </div>
         <div class="flex-row icon_container" >
